--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.18.0",
+    "enhance.js": "^1.0.0",
     "material-design-icons-iconfont": "^4.0.5",
     "vuetify": "^1.5.6",
     "yarn": "^1.13.0"
