CWE-169691: Resolved some linting issues and updated copyrights.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,11 @@
 {
     "git.ignoreLimitWarning": true,
     "cSpell.words": [
+        "abend",
+        "abended",
+        "compuware",
         "serializable",
+        "vsam",
         "webhooks"
     ]
 }
